operator/pkg/gateway-api/testdata/gateway/gateway-rejected-gatewayclass/output/gateway-rejected-gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  creationTimestamp: null
  name: gateway-rejected-gatewayclass
  namespace: gateway-conformance-infra
  resourceVersion: "1000"
spec:
  gatewayClassName: "rejected"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
status:
  conditions:
    - lastTransitionTime: "2025-07-01T05:06:15Z"
      message: "Referenced CiliumGatewayClassConfig does not exist"
      reason: InvalidParameters
      status: "False"
      type: Accepted
    - lastTransitionTime: "2025-07-01T05:06:15Z"
      message: "Waiting for Accepted condition to be True"
      reason: Pending
      status: "Unknown"
      type: Programmed
